--- a/src/app/user/request-novels/request-novels.component.css
+++ b/src/app/user/request-novels/request-novels.component.css
@@ -15,10 +15,21 @@ mat-expansion-panel-header{
   font-size: 23px;
   padding-left: 25rem;
   padding-top: 10px;
+  padding-bottom: 10px;
 
+}
+
+.postreq{
+  display: block;
+  margin-top: 1rem;
 }
 
 button{
   background-color: #1bbd36;
   color: white;
+}
+
+.info-text{
+  text-align: center;
+  margin-top: 2rem;
 }
