--- a/src/app/user/request-novels/request-novels.component.html
+++ b/src/app/user/request-novels/request-novels.component.html
@@ -3,11 +3,23 @@
     <mat-expansion-panel-header><B>Post And Request Novels</B></mat-expansion-panel-header>
     <mat-card>
       <mat-form-field>
-        <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
+        <input matInput type="text" [(ngModel)]="enteredTitle">
+      </mat-form-field>
+      <mat-form-field>
+        <textarea matInput rows="6" [(ngModel)]="enteredContent"></textarea>
       </mat-form-field>
       <button mat-raised-button (click)="onAddPost()">Save Post</button>
     </mat-card>
   </mat-expansion-panel>
 </mat-accordion>
 
-<p>{{newPost}}</p>
+<mat-accordion multi= "true" *ngIf= "posts.length > 0">
+  <mat-expansion-panel class="postreq" *ngFor = "let post of posts">
+    <mat-expansion-panel-header>
+      {{ post.title }}
+    </mat-expansion-panel-header>
+    <p>{{ post.content }}</p>
+  </mat-expansion-panel>
+</mat-accordion>
+
+<p class="mat-body-1 info-text" *ngIf = "posts.length <= 0">No Post Yet!</p>
