--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -3,7 +3,7 @@
 
         <!-- always visible -->
         <nb-actions size="medium">
-          <nb-action class="mt-4" nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']" routerLinkActive="router-link-active" >
+          <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']" routerLinkActive="router-link-active" >
               <h1 class="site-title">{{title}}</h1>
           </nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
@@ -12,13 +12,13 @@
         </nb-actions>
 
         <!-- visible when not logged in -->
-        <nb-actions size="medium"  *ngIf="!userService.loggedin">
+        <nb-actions size="medium"  *ngIf="!userService.loggedin" style="margin-left: auto;">
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">Register</nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signin']">Login</nb-action>
         </nb-actions>
 
         <!-- visible when logged in -->
-        <nb-actions size="medium" *ngIf="userService.loggedin">
+        <nb-actions size="medium" *ngIf="userService.loggedin" style="margin-left: auto;">
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']" >{{userService.currentUser.isadmin?'Admin Dashboard': 'User Dashboard'}}</nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" (click)="userService.logout()">Logout</nb-action>
         </nb-actions>
