--- a/src/app/authentication/list-sell/list-sell.component.html
+++ b/src/app/authentication/list-sell/list-sell.component.html
@@ -1,29 +1,43 @@
 <div class="row mt-5">
-  <div class="col-md-4">
+  <div class="col-md-11 mx-auto">
 
-  </div>
+    <nb-card>
+      <nb-card-body>
 
-  <div class="col-md-8">
-      <nb-card>
-          <nb-card-header>
-            Sell Your Novels
-          </nb-card-header>
-          <nb-list>
-            <nb-list-item *ngFor="let novel of novelList">
+      </nb-card-body>
+    </nb-card>
+
+    <nb-card class="mt-5">
+      <nb-card-body>
+
+        <div class="row">
+          <div class="col-md-3 mt-5" *ngFor="let novel of novelList">
+            
+            <div class="card">
+              <div class="card-img" [ngStyle]="{backgroundImage: 'url('+url+novel.avatar+')'}"></div>
               <div class="card-body">
-                <div class="row">
-                  <div class="col-md-4">
-                    <img [src]="url+novel.avatar" class="img-fluid" alt="">
-                  </div>
-                  <div class="col-md-8">
-                    <h3>{{novel.title}}</h3>
-                    <h6 class="text-muted">{{novel.genre}}</h6>
-                    <button [routerLink]="['/app/noveldetails', novel._id]" routerLinkActive="router-link-active" nbButton class="mt-4">{{novel.price | currency:'INR'}}</button>
-                  </div>
+                <h4>{{novel.title}}</h4>
+                <p class="text-muted">{{novel.genre}}</p>
+
+                
+                <div class="avatar">
+                  <nb-user size="medium"
+                          [name]="novel.user.fullname"
+                          title="Default"
+                          [picture]="url+novel.user.avatar"
+                          >
+                  </nb-user>
                 </div>
+               
+                <p class="price">{{novel.price | currency:'INR'}}</p>
+                
+
               </div>
-            </nb-list-item>
-          </nb-list>
-        </nb-card>
+            </div>
+          </div>
+        </div>
+
+      </nb-card-body>
+    </nb-card>
+    
   </div>
-</div>
