--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -1,57 +1,50 @@
-<h2>Sign in/up Form</h2>
-<div class="container" id="container">
-	<div class="form-container sign-up-container">
-		<form [formGroup]="signupform" (ngSubmit)="submitSignupForm()">
-			<h1>Create Account</h1>
-			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
-			<span>or use your email for registration</span>
-			<input type="text" placeholder="Name" name="fullname" formControlName="fullname"/>
-			<input type="email" placeholder="Email" name="email" formControlName="email"/>
-			<input type="password" placeholder="Password" name="password" formControlName="password"/>
-      <input type="password" placeholder="Confirm Password" name="confirm" formControlName="confirm"/>
-			<button>Sign Up</button>
-		</form>
-	</div>
-	<div class="form-container sign-in-container">
-		<form [formGroup]="signinform" (ngSubmit)="submitSigninForm()">
-			<h1>Sign in</h1>
-			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
-			<span>or use your account</span>
-			<input type="email" placeholder="Email" name="email" formControlName="email"/>
-			<input type="password" placeholder="Password" name="password" formControlName="password" />
-			<a [routerLink]="['/app/reset']" routerLinkActive="router-link-active" >Forgot your password?</a>
-			<button>Sign In</button>
-		</form>
-	</div>
-	<div class="overlay-container">
-		<div class="overlay">
-			<div class="overlay-panel overlay-left">
-				<h1 style="color: aliceblue;">Welcome Back!</h1>
-				<p style="color: aliceblue;">To keep connected with us please login with your personal info</p>
-				<button class="ghost" id="signIn" (click)="toggleSignIn()">Sign In</button>
-			</div>
-			<div class="overlay-panel overlay-right">
-				<h1 style="color: aliceblue;">Hello, Friend!</h1>
-				<p style="color: aliceblue;">Enter your personal details and start journey with us</p>
-				<button class="ghost" id="signUp" (click)="toggleSignUp()">Sign Up</button>
+<div class="col-md-8 mx-auto my-auto mt-5">
+	<div class="container" id="container">
+		<div class="form-container sign-up-container">
+			<form [formGroup]="signupform" (ngSubmit)="submitSignupForm()">
+				<h1>Create Account</h1>
+				<div class="social-container">
+					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+				</div>
+				<span>or use your email for registration</span>
+				<input type="text" placeholder="Name" name="fullname" formControlName="fullname"/>
+				<input type="email" placeholder="Email" name="email" formControlName="email"/>
+				<input type="password" placeholder="Password" name="password" formControlName="password"/>
+		  <input type="password" placeholder="Confirm Password" name="confirm" formControlName="confirm"/>
+				<button>Sign Up</button>
+			</form>
+		</div>
+		<div class="form-container sign-in-container">
+			<form [formGroup]="signinform" (ngSubmit)="submitSigninForm()">
+				<h1>Sign in</h1>
+				<div class="social-container">
+					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+				</div>
+				<span>or use your account</span>
+				<input type="email" placeholder="Email" name="email" formControlName="email"/>
+				<input type="password" placeholder="Password" name="password" formControlName="password" />
+				<a [routerLink]="['/app/reset']" routerLinkActive="router-link-active" >Forgot your password?</a>
+				<button>Sign In</button>
+			</form>
+		</div>
+		<div class="overlay-container">
+			<div class="overlay">
+				<div class="overlay-panel overlay-left">
+					<h1 style="color: aliceblue;">Welcome Back!</h1>
+					<p style="color: aliceblue;">To keep connected with us please login with your personal info</p>
+					<button class="ghost" id="signIn" (click)="toggleSignIn()">Sign In</button>
+				</div>
+				<div class="overlay-panel overlay-right">
+					<h1 style="color: aliceblue;">Hello, Friend!</h1>
+					<p style="color: aliceblue;">Enter your personal details and start journey with us</p>
+					<button class="ghost" id="signUp" (click)="toggleSignUp()">Sign Up</button>
+				</div>
 			</div>
 		</div>
 	</div>
+	
 </div>
-
-<!-- <footer>
-	<p>
-		Created with <i class="fa fa-heart"></i> by
-		<a target="_blank" href="https://florin-pop.com">Florin Pop</a>
-		- Read how I created this and how you can join the challenge
-		<a target="_blank" href="https://www.florin-pop.com/blog/2019/03/double-slider-sign-in-up-form/">here</a>.
-	</p>
-</footer> -->
