--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,14 @@ body {
   font-family: Raleway;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 .register {
   background: url("assets/register_back.png") no-repeat center;
