--- a/src/app/authentication/list-sell/list-sell.component.html
+++ b/src/app/authentication/list-sell/list-sell.component.html
@@ -1,12 +1,43 @@
 <div class="row mt-5">
-  <div class="col-md-11 mx-auto">
-
-    <!-- <nb-card>
+  <div class="col-md-2 search">
+    <nb-card style="position: sticky;top:0;">
       <nb-card-body>
+        <h3 class="mt-3">Search</h3>
+        <mat-form-field class="w-100 mt-4" appearance="outline">
+          <mat-label>Search Novel</mat-label>
+          <input type="text" matInput>
+        </mat-form-field>
+
+        <mat-form-field class="w-100 mt-2" appearance="outline">
+          <mat-label>Search Author</mat-label>
+          <input type="text" matInput>
+        </mat-form-field>
+
+        <mat-form-field class="w-100 mt-2" appearance="outline">
+          <mat-label>Search Uploader</mat-label>
+          <input type="text" matInput>
+        </mat-form-field>
+
+        <hr>
+        <h3 class="mt-3">Filters</h3>
+        <mat-form-field class="w-100 mt-4" appearance="outline">
+          <mat-label>Genre</mat-label>
+          <mat-select>
+            <mat-option value="">Fantasy</mat-option>
+            <mat-option value="">Mystry</mat-option>
+            <mat-option value="">Romance</mat-option>
+            <mat-option value="">Sci-Fi</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-slider thumbLabel tickInterval="100" step="100" min="0" max="100000" aria-label="units"></mat-slider>
 
       </nb-card-body>
-    </nb-card> -->
+    </nb-card>
+  </div>
 
+
+  <div class="col-md-10 mx-auto">
     <nb-card class="mt-5">
       <nb-card-header id="cardheader">
         Purchase Novels
@@ -19,12 +50,10 @@
 
             <div class="card">
               <div class="card-img" [routerLink]="['/app/noveldetails', novel._id]"
-                routerLinkActive="router-link-active"
-                [ngStyle]="{backgroundImage: 'url('+url+novel.avatar+')'}">
+                routerLinkActive="router-link-active" [ngStyle]="{backgroundImage: 'url('+url+novel.avatar+')'}">
               </div>
 
-              <div class="card-body"
-                [routerLink]="['/app/noveldetails', novel._id]"
+              <div class="card-body" [routerLink]="['/app/noveldetails', novel._id]"
                 routerLinkActive="router-link-active">
 
                 <h4 class="nt">{{novel.title}}</h4>
@@ -33,11 +62,7 @@
 
 
                 <div class="avatar">
-                  <nb-user size="medium"
-                          [name]="novel.user.fullname"
-                          title="Default"
-                          [picture]="url+novel.user.avatar"
-                          >
+                  <nb-user size="medium" [name]="novel.user.fullname" title="Default" [picture]="url+novel.user.avatar">
                   </nb-user>
                 </div>
 
