mat slider edited

--- a/src/app/authentication/list-exchange/list-exchange.component.html
+++ b/src/app/authentication/list-exchange/list-exchange.component.html
@@ -30,7 +30,7 @@
           </mat-select>
         </mat-form-field>
 
-        <mat-slider thumbLabel tickInterval="100" step="100" min="0" max="100000" aria-label="units"></mat-slider>
+        <mat-slider thumbLabel  min="0" max="9999" color="warn" aria-label="units"></mat-slider>
 
       </nb-card-body>
     </nb-card>
