--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
-<!-- <app-header></app-header> -->
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<nb-layout>
+
+  <nb-layout-header fixed>
+  <!-- Insert header here -->
+  </nb-layout-header>
+
+  <nb-layout-column>
+    <!-- <app-header></app-header> -->
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+    
+  </nb-layout-column>
+
+  <nb-layout-footer fixed>
+  <!-- Insert footer here -->
+  </nb-layout-footer>
+
+</nb-layout>
