--- a/src/app/user/request-novels/request-novels.component.css
+++ b/src/app/user/request-novels/request-novels.component.css
@@ -1,35 +1,35 @@
-mat-expansion-panel{
+/* mat-expansion-panel {
   width: 80%;
   margin: auto;
 }
-mat-card{
+mat-card {
   width: 80%;
   margin: auto;
 }
-mat-form-field, textarea {
+mat-form-field,
+textarea {
   width: 100%;
 }
 
-mat-expansion-panel-header{
-  color:#1bbd36;
+mat-expansion-panel-header {
+  color: #1bbd36;
   font-size: 23px;
   padding-left: 25rem;
   padding-top: 10px;
   padding-bottom: 10px;
-
 }
 
-.postreq{
+.postreq {
   display: block;
   margin-top: 1rem;
 }
 
-button{
+button {
   background-color: #1bbd36;
   color: white;
 }
 
-.info-text{
+.info-text {
   text-align: center;
   margin-top: 2rem;
-}
+} */
