request novel css

--- a/src/app/user/request-novels/request-novels.component.css
+++ b/src/app/user/request-novels/request-novels.component.css
@@ -1,4 +1,4 @@
-/* mat-expansion-panel {
+mat-expansion-panel {
   width: 80%;
   margin: auto;
 }
@@ -32,4 +32,4 @@ button {
 .info-text {
   text-align: center;
   margin-top: 2rem;
-} */
+}
