--- a/src/app/user/layout/layout.component.html
+++ b/src/app/user/layout/layout.component.html
@@ -4,7 +4,7 @@
     <!-- always visible -->
     <nb-actions size="medium">
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']" routerLinkActive="router-link-active" >
-          <h1 class="site-title">{{title}}</h1>
+          <h1 class="site-title">BOOK<span style="color: #1bbd36;">WORMS</span></h1>
       </nb-action>
       <nb-action  nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
     </nb-actions>
@@ -42,7 +42,7 @@
       <!-- <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']" >{{userService.currentUser.isadmin?'Admin Dashboard': 'User Dashboard'}}</nb-action> -->
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" (click)="userService.logout()">Logout</nb-action>
     </nb-actions>
-    
+
 
 </nb-layout-header>
 
