--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,7 +7,9 @@
       <nb-card-body style="padding: 3rem;">
           <div class="row">
               <div class="col-md-4">
-                  <img [src]="url+currentUser.avatar" class="img-fluid" alt="">
+
+                <img [src]="url+currentUser.avatar" class="img-fluid" alt="">
+
               </div>
               <div class="col-md-8">
                   <form [formGroup]="updateForm" (ngSubmit)="updateProfile()">
@@ -25,7 +27,16 @@
                           <mat-label>Age</mat-label>
                           <input type="number" matInput formControlName="age">
                       </mat-form-field>
+
+                      <input type="file" class="form-control w-50 mx-auto mt-4 "
+                          (change)="uploadAvatar($event)">
+
+                      <img [src]="imgURL" alt="" *ngIf="imgURL" class="img-fluid mt-3"
+                          style="height: 200px; width: 200px; border: 2px solid rgb(20, 17, 17);">
+                          <br>
                       <button nbButton status="primary" hero class="mt-3">Update</button>
+
+
 
                   </form>
               </div>
