--- a/src/app/user/request-novels/request-novels.component.html
+++ b/src/app/user/request-novels/request-novels.component.html
@@ -1,11 +1,15 @@
 <mat-accordion>
   <mat-expansion-panel>
-    <mat-expansion-panel-header><B>Post And Request Novels</B></mat-expansion-panel-header>
+    <mat-expansion-panel-header>
+      <p class="exp-header text-center mt-4 mb-4 w-100">Post And Request Novels</p>
+    </mat-expansion-panel-header>
     <mat-card>
-      <mat-form-field>
+      <mat-form-field class="mt-5 w-100" appearance="outline">
+        <mat-label>Title</mat-label>
         <input matInput type="text" [(ngModel)]="enteredTitle">
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field class="mt-2 w-100" appearance="outline">
+        <mat-label>Description</mat-label>
         <textarea matInput rows="6" [(ngModel)]="enteredContent"></textarea>
       </mat-form-field>
       <button mat-raised-button (click)="onAddPost()">Save Post</button>
