--- a/src/app/user/request-novels/request-novels.component.css
+++ b/src/app/user/request-novels/request-novels.component.css
@@ -2,9 +2,7 @@
   width: 80%;
   margin: auto;
 }
-mat-card {
-  width: 80%;
-  margin: auto;
+
 }
 mat-form-field,
 textarea {
@@ -15,6 +13,12 @@ textarea {
   color: #1bbd36;
   font-size: 23px;
   font-weight: bold;
+}
+
+mat-card-content {
+  width: 80%;
+  margin: auto;
+
 }
 
 .postreq {
