aboutus route added

--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -7,7 +7,7 @@
               <h1 class="site-title">BOOK<span style="color: #1bbd36;">WORMS</span></h1>
           </nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
-          <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">About Us</nb-action>
+          <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/aboutus']">About Us</nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/contactus']">Contact Us</nb-action>
         </nb-actions>
 
