--- a/src/app/authentication/layout/layout.component.html
+++ b/src/app/authentication/layout/layout.component.html
@@ -18,7 +18,7 @@
 
       <nb-actions  size="medium">
 
-      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">About Us</nb-action>
+      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/aboutus']">About Us</nb-action>
       <!-- <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/rentnovel']">Rent Novels</nb-action>
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/buynovel']">Purchase Novels</nb-action>
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/exchangenovel']">Exchange Novels</nb-action> -->
