--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,21 @@
-<p>about-us works!</p>
+<mat-card>
+  Welcome to BOOKWORMS, your number one source for all your desired novels.
+  We're dedicated to providing you the very best services,
+  with an emphasis on exchanging your novels, renting your novels,
+  and selling your novels.
+    <br><br>
+
+  Founded in 2020 by Digvijay Singh, BOOKWORMS has come a long way from its beginnings in Lucknow, India.
+  When Digvijay first started out, his passion for reading rare novels drove them to start his own business.
+
+<br><br>
+  We hope you enjoy our services as much as we enjoy offering them to you.
+  If you have any questions or comments, please don't hesitate to contact us.
+<br><br>
+
+  Sincerely,
+<br>
+  Digvijay Singh,
+<br>
+  Founder (BOOKWORMS)
+</mat-card>
