error solve in req novel

--- a/src/app/user/request-novels/request-novels.component.html
+++ b/src/app/user/request-novels/request-novels.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
     <mat-form-field class="mt-2 w-100" appearance="outline">
       <mat-label>Description</mat-label>
-      <textarea matInput rows="6" [(ngModel)]="enteredDescription"></textarea>
+      <textarea matInput rows="6" [(ngModel)]="enteredContent"></textarea>
     </mat-form-field>
     <button mat-raised-button (click)="onAddPost()">Save Post</button>
   </mat-card-content>
