--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -49,7 +49,7 @@
                       </div>
                       <div class="col-lg-12">
                         <fieldset>
-                          <button type="submit" id="form-submit" class="main-button">Send Message</button>
+                          <button nbButton type="submit" id="form-submit" class="main-button">Send Message</button>
                         </fieldset>
                       </div>
                     </div>
