--- a/src/app/list-request/list-request.component.html
+++ b/src/app/list-request/list-request.component.html
@@ -11,22 +11,16 @@
 
           <div class="card">
 
+            <!-- <div class="avatar">
+              <nb-user size="medium" [name]="request.user.fullname" title="Default" [picture]="url+request.user.avatar">
+              </nb-user>
+            </div> -->
+            
             <div class="card-body">
 
               <h4 class="nt">{{request.title}}</h4>
 
               <p class="text-muted">{{request.content}}</p>
-
-
-              <!-- <div class="avatar">
-                <nb-user size="medium" [name]="novel.user.fullname" title="Default" [picture]="url+novel.user.avatar">
-                </nb-user>
-              </div>
-
-              <p class="price">{{novel.price | currency:'INR'}}</p> -->
-              <!-- <a [routerLink]="['/app/noveldetails']" routerLinkActive="router-link-active"
-                class="price">{{novel.price | currency:'INR'}}
-              </a> -->
 
             </div>
           </div>
