--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -7,6 +7,13 @@
               <h1 class="site-title">BOOK<span style="color: #1bbd36;">WORMS</span></h1>
           </nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
+
+          <nb-select  placeholder="Novels" >
+            <nb-option  [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Exchange Novels</nb-option>
+            <nb-option  [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active" >Purchase Novels</nb-option>
+            <nb-option  [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active" >Rent Novels</nb-option>
+          </nb-select>
+
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/aboutus']">About Us</nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/contactus']">Contact Us</nb-action>
         </nb-actions>
@@ -20,7 +27,6 @@
         <!-- visible when logged in -->
         <nb-actions size="medium" *ngIf="userService.loggedin" style="margin-left: auto;">
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']" >{{userService.currentUser.isadmin?'Admin Dashboard': 'User Dashboard'}}</nb-action>
-          <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" (click)="userService.logout()">Logout</nb-action>
         </nb-actions>
         <nb-user *ngIf="userService.loggedin"
            size="large"
@@ -29,6 +35,10 @@
            [picture]="url+userService.currentUser.avatar"
            [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']">
         </nb-user>
+
+        <nb-actions size="medium" *ngIf="userService.loggedin">
+          <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" (click)="userService.logout()">Logout</nb-action>
+        </nb-actions>
 
     </nb-layout-header>
     <nb-sidebar>
