--- a/src/app/list-request/list-request.component.html
+++ b/src/app/list-request/list-request.component.html
@@ -11,11 +11,11 @@
 
           <div class="card">
 
-            <!-- <div class="avatar">
-              <nb-user size="medium" [name]="request.user.fullname" title="Default" [picture]="url+request.user.avatar">
+             <div class="avatar">
+              <nb-user size="medium" [name]="request.user.fullname" [picture]="url+request.user.avatar">
               </nb-user>
-            </div> -->
-            
+            </div>
+
             <div class="card-body">
 
               <h4 class="nt">{{request.title}}</h4>
