--- a/src/app/list-request/list-request.component.html
+++ b/src/app/list-request/list-request.component.html
@@ -26,8 +26,8 @@
 
             </div>
 
-            <nb-card-action>
-              <button nbButton status="primary"><nb-icon icon="heart"></nb-icon>Primary</button>
+            <nb-card-action style="padding: 1rem;">
+              <button nbButton status="primary" (click)="repondToUser(request.user._id)"><nb-icon icon="heart"></nb-icon>Respond</button>
             </nb-card-action>
           </div>
         </div>
