--- a/src/app/list-request/list-request.component.html
+++ b/src/app/list-request/list-request.component.html
@@ -27,7 +27,8 @@
             </div>
 
             <nb-card-action>
-              <button nbButton status="primary"><nb-icon icon="heart"></nb-icon>Primary</button>
+              <button nbButton status="primary"><nb-icon icon="heart"></nb-icon></button>
+              <button nbButton status="info"><nb-icon icon="message-circle"></nb-icon></button>
             </nb-card-action>
           </div>
         </div>
