--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -3,6 +3,11 @@
 
         <!-- always visible -->
         <nb-actions size="medium">
+
+          <nb-action>
+            <button nbButton status="primary" (click)="toggle()"><nb-icon icon="menu-2-outline" status="control"></nb-icon></button>
+          </nb-action>
+
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']" routerLinkActive="router-link-active" >
               <h1 class="site-title">BOOK<span style="color: #1bbd36;">WORMS</span></h1>
           </nb-action>
@@ -41,7 +46,7 @@
         </nb-actions>
 
     </nb-layout-header>
-    <nb-sidebar>
+    <nb-sidebar responsive>
       <nb-menu [items]="sidebarItems">
 
       </nb-menu>
