--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -160,14 +160,14 @@
               </svg>
               <i class="bx bxl-dribbble"></i>
             </div>
-            <!-- <div >
+            <div >
               <nb-user [name]="request.user.fullname" [picture]="url+request.user.avatar">
               </nb-user>
             </div>
 
               <h4>{{request.title}}</h4>
 
-              <p class="text-muted">{{request.content}}</p> -->
+              <p class="text-muted">{{request.content}}</p>
             <h4><a href="">Lorem Ipsum</a></h4>
             <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
           </div>
