--- a/src/app/user/layout/layout.component.html
+++ b/src/app/user/layout/layout.component.html
@@ -11,6 +11,7 @@
           <h1 class="site-title">BOOK<span style="color: #1bbd36;">WORMS</span></h1>
       </nb-action>
       <nb-action  nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
+      <nb-action [routerLink]="['/app/listrequest']" routerLinkActive="router-link-active" >Posts</nb-action>
     </nb-actions>
 
       <nb-select placeholder="Novels"  >
