athentication header post btn

--- a/src/app/authentication/layout/layout.component.html
+++ b/src/app/authentication/layout/layout.component.html
@@ -8,7 +8,7 @@
           <h1 class="site-title">BOOK<span style="color: #1bbd36;">WORMS</span></h1>
       </nb-action>
       <nb-action  nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
-      <nb-action  nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/listrequest']">Requests</nb-action>
+      <nb-action  nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/listrequest']">Posts</nb-action>
     </nb-actions>
 
       <nb-select  placeholder="Novels" >
