--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -4,7 +4,7 @@ footer
 ---------------------------------------------
 */
 footer {
-  background-image: linear-gradient(127deg, #1bbd36 0%, #8261ee 91%);
+  background-image: linear-gradient(127deg, #0f8122 0%, #1bbd36 91%);
   padding-top: 30px;
 }
 
