--- a/src/app/authentication/signin/signin.component.css
+++ b/src/app/authentication/signin/signin.component.css
@@ -5,7 +5,7 @@
 	box-sizing: border-box;
 }
 
-body {
+#body {
 	background: #f6f5f7;
 	display: flex;
 	justify-content: center;
@@ -14,6 +14,9 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	height: 100vh;
 	margin: -20px 0 50px;
+  background-image: url("/assets/img/signup.png") no-repeat center;
+  background-attachment: fixed;
+
 }
 
 h1 {
@@ -90,7 +93,7 @@ input {
 }
 
 .container {
-	background-color: #fff;
+	background-color: rgb(204, 219, 193);
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25),
 			0 10px 10px rgba(0,0,0,0.22);
@@ -225,28 +228,3 @@ input {
 	height: 40px;
 	width: 40px;
 }
-
-/* footer {
-    background-color: #222;
-    color: #fff;
-    font-size: 14px;
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 999;
-}
-
-footer p {
-    margin: 10px 0;
-}
-
-footer i {
-    color: red;
-}
-
-footer a {
-    color: #3c97bf;
-    text-decoration: none;
-} */
