--- a/src/app/user/checkout/checkout.component.css
+++ b/src/app/user/checkout/checkout.component.css
@@ -101,3 +101,59 @@ span.price {
     margin-bottom: 20px;
   }
 }
+
+
+/* card */
+form.checkout {
+    max-width: 500px;
+    margin: 2rem auto;
+    text-align: center;
+    border: 2px solid #eee;
+    border-radius: 8px;
+    padding: 1rem 2rem;
+    background: white;
+
+    font-family: monospace;
+    color: #525252;
+    font-size: 1.1rem;
+  }
+
+  form.checkout button {
+    padding: 0.5rem 1rem;
+    color: white;
+    background: coral;
+    border: none;
+    border-radius: 4px;
+    margin-top: 1rem;
+  }
+
+  form.checkout button:active {
+    background: rgb(165, 76, 43);
+  }
+
+  .StripeElement {
+    margin: 1rem 0 1rem;
+    background-color: white;
+    padding: 8px 12px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+  }
+
+  .StripeElement--focus {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+  }
+
+  .StripeElement--invalid {
+    border-color: #fa755a;
+  }
+
+  .StripeElement--webkit-autofill {
+    background-color: #fefde5 !important;
+  }
+
+  #card-info{
+    width: 20rem;
+  }
