--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,6 +1,88 @@
-<nb-layout>
-    <nb-layout-column>
-        <button nbButton>Thats a button</button>
+<div class="row">
+  <div class="col-md-10 mx-auto">
+      <nb-card accent="danger">
+          <nb-card-body>
+              <div class="row">
+                  <div class="col-2">
+                      <div class="icon-container">
+                          <nb-icon icon="people" style="font-size: 5rem;width: 100%;" status="control"></nb-icon>
+                      </div>
+                  </div>
+                  <div class="col-9">
+                      <div class="row">
+                          <div class="col-8 mt-4">
+                              <h3>Total Users : </h3>
+                          </div>
 
-    </nb-layout-column>
-</nb-layout>
+                          <div class="col-4 mx-auto">
+                              <p class="figure">{{usersList.length| number:'2.0'}}</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </nb-card-body>
+      </nb-card>
+  </div>
+</div>
+
+
+
+
+<div class="row">
+  <div class="col-md-10 mx-auto">
+      <nb-card accent="success">
+
+          <nb-card-body>
+              <div id="regByDate" style="height: 20rem;"></div>
+          </nb-card-body>
+        </nb-card>
+  </div>
+</div>
+<div class="row mt-5">
+  <div class="col-md-10 mx-auto">
+      <nb-card accent="danger">
+          <nb-card-body>
+              <div class="row">
+                  <div class="col-2">
+                      <div class="icon-container">
+                          <nb-icon icon="browser" style="font-size: 5rem;width: 100%;" status="control"></nb-icon>
+                      </div>
+                  </div>
+                  <div class="col-9">
+                      <div class="row">
+                          <div class="col-8 mt-4">
+                              <h3>Total Novels </h3>
+                          </div>
+
+                          <div class="col-4 mx-auto">
+                              <p class="figure">{{novelsList.length| number:'2.0'}}</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </nb-card-body>
+      </nb-card>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-10 mx-auto">
+      <nb-card accent="success">
+
+          <nb-card-body>
+              <!--
+            <canvas baseChart width="400" height="400"
+              [datasets]="userChartData['plotData']"
+              [labels]="userChartData['labels']"
+              [options]="userChartData['options']"
+              [legend]="userChartData['legend']"
+              [chartType]="userChartData['chartType']">
+          </canvas> -->
+          <div id="companyByDate" style="height: 20rem;"></div>
+          <!--
+          <div>
+              <canvas id="myChart"></canvas>
+            </div> -->
+          </nb-card-body>
+      </nb-card>
+  </div>
+</div>
