--- a/src/app/admin/manage-novels/manage-novels.component.html
+++ b/src/app/admin/manage-novels/manage-novels.component.html
@@ -46,7 +46,7 @@
             <img [src]="url+novel.avatar" class="img-fluid" alt="">
         </div>
 
-          <div class="row mt-5">
+          <!-- <div class="row mt-5">
               <div class="col text-center">
                   <button class="col-10" nbButton (click)="updateNovel(novel)">Edit</button>
               </div>
@@ -54,7 +54,7 @@
               <div class="col text-center">
                   <button class="col-10" nbButton hero (click)="deleteNovel(novel._id)" status  ="danger">Delete</button>
               </div>
-          </div>
+          </div> -->
         </nb-accordion-item-body>
       </nb-accordion-item>
   </nb-accordion>
