--- a/src/app/user/checkout/checkout.component.html
+++ b/src/app/user/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <div class="body">
   <h2>Checkout Form</h2>
 <br><br>
@@ -78,7 +78,7 @@
     </div>
   </div>
 </div>
-</div>
+</div> -->
 
 
 
