--- a/src/app/user/manage-novels/manage-novels.component.html
+++ b/src/app/user/manage-novels/manage-novels.component.html
@@ -14,6 +14,8 @@
           <div class="col-md-4">
             <img [src]="url+novel.avatar" class="img-fluid" alt="">
           </div>
+          <hr>
+          <p class="price">{{novel.price | currency:'INR'}}</p>
         <hr>
 
 
